# AIaiboFireware

./: .gitmodules  CMakeLists.txt  build.bat  load.bat  pyocd.yaml  pyproject.toml
driver/include/: apm32f402_403.h  apm32f402_403_gpio.h  apm32f402_403_misc.h  apm32f402_403_rcm.h  apm32f402_403_tmr.h  apm32f402_403_usb.h  apm32f402_403_usb_device.h  apm32f402_403_usb_host.h  system_apm32f402_403.h
driver/linkscript/: apm32f402_403xb_flash.ld
driver/src/: apm32f402_403_gpio.c  apm32f402_403_misc.c  apm32f402_403_rcm.c  apm32f402_403_tmr.c  apm32f402_403_usb.c  apm32f402_403_usb_device.c  apm32f402_403_usb_host.c  system_apm32f402_403.c
driver/start/: startup_apm32f402_403.S
src/: apm32f402_403_int.c  apm32f402_403_int.h  main.c
src/config/include/: delay.h  device_cfg.h  gpio_config.h  usb_cfg.h
src/config/source/: delay.c  device_cfg.c  gpio_config.c  usb_cfg.c
src/port/: usb_dc.c
user/: FreeRTOSConfig.h  apm32f402_403_int.c  apm32f402_403_int.h  main.c
user/config/include/: delay.h  device_cfg.h  usb_cfg.h
user/config/source/: delay.c  device_cfg.c  usb_cfg.c
user/module/communication/: comm_interface.c  comm_interface.h
user/module/communication/USB/: comm_usb.c  comm_usb.h
user/module/communication/USB/port/: usb_dc.c  usb_reg.h
user/tasks/: task_comm.c  task_led1.c  task_led2.c  tasks.h
